fixed scroll bar not showing up

--- a/PolliFriend/frontend/src/components/GardenPlanPage/GardenPlanPage.css
+++ b/PolliFriend/frontend/src/components/GardenPlanPage/GardenPlanPage.css
@@ -8,7 +8,7 @@
     display: flex;
     /* flex-direction: row; */
     /* flex-wrap: wrap; */
-    /* height: 100%; */
+    height: 100%;
 }
 .garden-map .map-container {
     flex-grow: 1;
